@@ -8,10 +8,10 @@ Standards-Version: 3.9.2
 Package: zentyal-openchange
 Architecture: all
 Depends: zentyal-core (>= 4.0~1), zentyal-core (<< 4.1),
-         zentyal-samba, zentyal-mail, zentyal-webserver,
+         zentyal-samba, zentyal-mail,
          openchangeserver (>= 3:2.0-2~20140606-1~92),
          openchange-rpcproxy, libstring-random-perl,
-         openchange-ocsmanager, zoctools,
+         openchange-ocsmanager, apache2, zoctools,
          sogo-openchange (>= 2.2.5-zentyal1~20140618-1~108),
          libuuid-tiny-perl, libanyevent-perl,
          libanyevent-rabbitmq-perl, libnet-rabbitfoot-perl,
