@@ -8,7 +8,7 @@ Standards-Version: 3.9.2
 Package: zentyal-sogo
 Architecture: all
 Depends: zentyal-core (>= 4.0~1), zentyal-core (<< 4.1),
-         zentyal-openchange, zentyal-webserver, zip
+         zentyal-openchange, zip
 Description: Zentyal - OpenChange Web Mail
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
