@@ -2,5 +2,4 @@ class: 'EBox::SOGO'
 
 enabledepends:
     - openchange
-    - webserver
 
