@@ -1,4 +1,5 @@
 4.0
+	+ Remove dependency on deprecated webserver module
 	+ Set version to 4.0
 	+ Set proper actions and files in module enable action
 3.5
