@@ -1,4 +1,5 @@
 4.0
+	+ Remove dependency on deprecated webserver module
 	+ Set version to 4.0
 	+ Adapted rcpproxy certificate generation to changes in webadmin certificates
 	+ Depends on latest zentyal-samba to make sure openchange.conf
